--- a/cens-452/src/index.css
+++ b/cens-452/src/index.css
@@ -38,7 +38,48 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+   --cens-blue-50:  #EBF2FE;
+  --cens-blue-100: #D6E4FD;
+  --cens-blue-200: #ADC9FB;
+  --cens-blue-300: #85AFF9;
+  --cens-blue-400: #5C94F7;
+  --cens-blue-500: #1C64E0; /* color base */
+  --cens-blue-600: #1752B4;
+  --cens-blue-700: #123F87;
+  --cens-blue-800: #0C2B5A;
+  --cens-blue-900: #06172D;
+   --cens-green-50:  #F1F8EC;
+  --cens-green-100: #DDEED3;
+  --cens-green-200: #BBDDA8;
+  --cens-green-300: #99CC7C;
+  --cens-green-400: #77BB51;
+  --cens-green-500: #5A8E2D; /* base */
+  --cens-green-600: #497324;
+  --cens-green-700: #37581B;
+  --cens-green-800: #253E12;
+  --cens-green-900: #122309;
+   --cens-yellow-50:  #FFF9ED;
+  --cens-yellow-100: #FEEECB;
+  --cens-yellow-200: #FDDE97;
+  --cens-yellow-300: #FCCE63;
+  --cens-yellow-400: #FABE2F;
+  --cens-yellow-500: #F5B33C; /* base */
+  --cens-yellow-600: #C48F30;
+  --cens-yellow-700: #936B24;
+  --cens-yellow-800: #624818;
+  --cens-yellow-900: #31240C;
+   --cens-gray-50:  #FAFAFA;
+  --cens-gray-100: #F5F5F5;
+  --cens-gray-200: #E6E6E6; /* base */
+  --cens-gray-300: #D4D4D4;
+  --cens-gray-400: #A3A3A3;
+  --cens-gray-500: #737373;
+  --cens-gray-600: #525252;
+  --cens-gray-700: #404040;
+  --cens-gray-800: #262626;
+  --cens-gray-900: #171717;
 }
+
 
 .dark {
   --background: oklch(0.145 0 0);
@@ -114,7 +155,6 @@
   --color-sidebar-ring: var(--sidebar-ring);
 }
 
-
 @layer base {
   :root {
     --sidebar: oklch(0.985 0 0);
@@ -126,7 +166,7 @@
     --sidebar-border: oklch(0.922 0 0);
     --sidebar-ring: oklch(0.708 0 0);
   }
- 
+
   .dark {
     --sidebar: oklch(0.205 0 0);
     --sidebar-foreground: oklch(0.985 0 0);
@@ -137,7 +177,7 @@
     --sidebar-border: oklch(1 0 0 / 10%);
     --sidebar-ring: oklch(0.439 0 0);
   }
-   * {
+  * {
     @apply border-border outline-ring/50;
   }
   body {
